# gmp

./: CMakeLists.txt  build.py  conanfile.py
cmake/: config.h.cmake  gmp.h.cmake  mpn-generic.cmake
cmake/msvc/: libgmp.def
